lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:19: error: not found: value setPousseDesiree
  		setPousseDesiree(3)	
                ^Lander:22: error: not found: value setPousseDesiree
  		setPousseDesiree(3)
                ^